@@ -6,70 +6,40 @@ import com.company.lang.ISolver;
 import org.junit.Assert;
 import org.junit.Test;
 
-import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 import java.util.Random;
 
-public class ISolverTest extends Assert {
+public abstract class ISolverTest extends Assert {
     // TODO: select your class here
     private static final Class<? extends ISolver> testingClass = JamaSolver.class;
 
     private static final double precision = 1e-3;
-    private static final int maxSize = 10;
+    protected static final int maxSize = 10;
 
-    @Test
-    public void basicTest() {
-        check(new double[][]{{1., 2.}, {2., 1.}}, new double[]{5., 4.});
+    private double[][] A;
+    private double[] b;
+
+    public ISolverTest(double[][] A, double[] b) {
+        this.A = A;
+        this.b = b;
     }
 
-    @Test
-    public void randomTest() {
-        Random r = new Random();
-        for (int t = 0; t < 10; t++) {
-            int n = r.nextInt(maxSize) + 1;
-            double[][] A = new double[n][n];
-            for (int i = 0; i < n; i++) {
-                A[i] = generateRandomVector(n);
-            }
-            double[] b = generateRandomVector(n);
-            check(A, b);
-        }
-    }
-
-    @Test
-    public void hilbertTest() {
-        for (int t = 0; t < 10; t++) {
-            double[][] A = new double[maxSize][maxSize];
-            double[] b = generateRandomVector(maxSize);
-
-            for (int i = 0; i < maxSize; i++) {
-                for (int j = 0; j < maxSize; j++) {
-                    A[i][j] = 1.0 / (1 + i + j);
-                }
-            }
-            check(A, b);
-        }
-    }
-
-
-    void printErrorMessage(String s) {
+    private static void printErrorMessage(String s) {
         System.out.println(s);
         assertTrue(false);
     }
 
-    private double[] solve(double[][] A, double[] b) {
+    private static double[] solve(double[][] A, double[] b) {
         ISolver solver = null;
         try {
             try {
-                Constructor<? extends ISolver> constructor = testingClass.getConstructor(double.class);
-                solver = constructor.newInstance(precision);
+                solver = testingClass.getConstructor(double.class).newInstance(precision);
             } catch (NoSuchMethodException e) {
                 try {
-                    Constructor<? extends ISolver> constructor = testingClass.getConstructor();
-                    solver = constructor.newInstance();
+                    solver = testingClass.getConstructor().newInstance();
                 } catch (NoSuchMethodException e1) {
-                    printErrorMessage("No appropriate constructor found");
+                    printErrorMessage("No appropriate constructor found in class " + testingClass.getName() + "; <init>() or <init>(double) required");
                 }
             }
         } catch (InvocationTargetException | InstantiationException | IllegalAccessException e) {
@@ -77,27 +47,28 @@ public class ISolverTest extends Assert {
         }
         assert solver != null;
 
-        double[] result = solver.solve(A, b);
-        if (result.length != b.length) {
-            printErrorMessage("Wrong vector length");
+        try {
+            return solver.solve(A, b);
+        } catch (ISolver.SolverException e){
+            printErrorMessage(e.getMessage());
         }
-
-        return result;
+        return null;
     }
 
-    private void check(double[][] A, double[] b) {
+    @Test
+    public void check() {
         double[] x = solve(A, b);
         double[] b2 = new Matrix(A).times(new Matrix(new double[][]{x}).transpose()).transpose().getArray()[0];
         for (int i = 0; i < b.length; i++) {
             if (Math.abs(b[i] - b2[i]) > precision) {
-                printErrorMessage("Wrong answer \nFor test:\n" + matrixToString(A) + "\n\n" + Arrays.toString(b)
+                printErrorMessage("Wrong answer \nFor test:\nA:\n" + matrixToString(A) + "\nb:\n" + Arrays.toString(b)
                         + "\nExpected: " + Arrays.toString(new JamaSolver().solve(A, b))
                         + "\nGained: " + Arrays.toString(x));
             }
         }
     }
 
-    double[] generateRandomVector(int n) {
+    protected static double[] generateRandomVector(int n) {
         Random r = new Random();
         double[] v = new double[n];
         for (int i = 0; i < n; i++) {
@@ -106,7 +77,7 @@ public class ISolverTest extends Assert {
         return v;
     }
 
-    private String matrixToString(double[][] a) {
+    protected static String matrixToString(double[][] a) {
         StringBuilder s = new StringBuilder();
         for (int i = 0; i < a.length; i++) {
             s.append("[[");
